Bug 1295967 - Share Shapes and BaseShapes across compartments. r=jonco,fitzgen,njn