js/src/vm/MemoryMetrics.cpp
@@ -322,7 +322,8 @@ StatsZoneCallback(JSRuntime* rt, void* data, Zone* zone)
     zone->addSizeOfIncludingThis(rtStats->mallocSizeOf_,
                                  &zStats.typePool,
                                  &zStats.baselineStubsOptimized,
-                                 &zStats.uniqueIdMap);
+                                 &zStats.uniqueIdMap,
+                                 &zStats.shapeTables);
 }
 
 static void
@@ -546,49 +547,11 @@ StatsCellCallback(JSRuntime* rt, void* data, void* thing, JS::TraceKind traceKin
         break;
 
       case JS::TraceKind::BaseShape: {
-        BaseShape* base = static_cast<BaseShape*>(thing);
-        CompartmentStats& cStats = base->compartment()->compartmentStats();
-
-        JS::ClassInfo info;        // This zeroes all the sizes.
+        JS::ShapeInfo info;        // This zeroes all the sizes.
         info.shapesGCHeapBase += thingSize;
         // No malloc-heap measurements.
 
-        cStats.classInfo.add(info);
-
-        // XXX: This code is currently disabled because it occasionally causes
-        // crashes (bug 1132502 and bug 1243529). The best theory as to why is
-        // as follows.
-        //
-        // - XPCNativeScriptableShared have heap-allocated js::Class instances.
-        //
-        // - Once an XPCNativeScriptableShared is destroyed, its js::Class is
-        //   freed, but we can still have a BaseShape with a clasp_ pointer
-        //   that points to the freed js::Class.
-        //
-        // - This dangling pointer isn't used in normal execution, because the
-        //   BaseShape is unreachable.
-        //
-        // - However, memory reporting inspects all GC cells, reachable or not,
-        //   so we trace the dangling pointer and crash.
-        //
-        // One solution would be to mark BaseShapes whose js::Class is
-        // heap-allocated, and skip this code just for them. However, that's a
-        // non-trivial change, and heap-allocated js::Class instances are
-        // likely to go away soon.
-        //
-        // So for now we just skip this code for all BaseShapes. The
-        // consequence is that all BaseShapes will show up in about:memory
-        // under "class(<non-notable classes>)" sub-trees, instead of the more
-        // appropriate, class-specific "class(Foo)" sub-tree. But BaseShapes
-        // typically don't take up that much memory so this isn't a big deal.
-        //
-        // XXX: once bug 1265271 is done this code should be re-enabled.
-        //
-        if (0) {
-            const Class* clasp = base->clasp();
-            const char* className = clasp->name;
-            AddClassInfo(granularity, cStats, className, info);
-        }
+        zStats->shapeInfo.add(info);
         break;
       }
 
@@ -607,23 +570,14 @@ StatsCellCallback(JSRuntime* rt, void* data, void* thing, JS::TraceKind traceKin
 
       case JS::TraceKind::Shape: {
         Shape* shape = static_cast<Shape*>(thing);
-        CompartmentStats& cStats = shape->compartment()->compartmentStats();
-        JS::ClassInfo info;        // This zeroes all the sizes.
+
+        JS::ShapeInfo info;        // This zeroes all the sizes.
         if (shape->inDictionary())
             info.shapesGCHeapDict += thingSize;
         else
             info.shapesGCHeapTree += thingSize;
         shape->addSizeOfExcludingThis(rtStats->mallocSizeOf_, &info);
-        cStats.classInfo.add(info);
-
-        // XXX: once bug 1265271 is done, occur, this code should be
-        // re-enabled. (See the big comment on the BaseShape case above.)
-        if (0) {
-            const BaseShape* base = shape->base();
-            const Class* clasp = base->clasp();
-            const char* className = clasp->name;
-            AddClassInfo(granularity, cStats, className, info);
-        }
+        zStats->shapeInfo.add(info);
         break;
       }
 
